Fixed color contrast a11y issue by adding a new purple, and adding a variable for current links

--- a/src/css/base/_variables.css
+++ b/src/css/base/_variables.css
@@ -22,6 +22,7 @@
   --color--purple-100: #f0dff6;
   --color--purple-500: #d7c4de;
   --color--purple-900: #ae8fba;
+  --color--purple-1000: #7c3696;
 
   --color--red-100: #ffbec0;
   --color--red-500: #e5383e;
@@ -59,6 +60,7 @@
   --color--focus: var(--color--primary-dark);
   --color--link: var(--color--primary-base);
   --color--link-hover: var(--color--primary-dark);
+  --color--current: var(--color--purple-1000);
 
   /* Font & typography */
 
