--- a/src/css/components/_page-nav.css
+++ b/src/css/components/_page-nav.css
@@ -13,5 +13,5 @@
 }
 
 .page-nav [aria-current="page"] {
-  color: var(--color--accent-dark);
+  color: var(--color--current);
 }
